# dreamscape

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: websocket.py
backend/app/schemas/: world.py
backend/app/services/: code_executor.py  llm_service.py  world_state.py
backend/app/tests/: test_schemas.py  test_tools.py  test_world_state.py
backend/app/tools/: definitions.py
docs/: ARCHITECTURE.md
frontend/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: main.ts  styles.css
frontend/src/audio/: VoiceInput.ts
frontend/src/engine/: SceneManager.ts  WebSocketClient.ts
frontend/src/types/: world.ts
frontend/src/ui/: UI.ts
