[project]
name = "dreamscape-backend"
version = "0.1.0"
description = "AI-powered interactive 3D world builder - backend"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "openai>=1.50.0",
    "pydantic>=2.10.0",
    "websockets>=14.0",
    "trimesh[easy]>=4.0.0",
    "numpy>=1.26.0",
    "Pillow>=10.0.0",
    "scipy>=1.12.0",
    "ipython>=8.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.390",
    "httpx>=0.28.0",
]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "strict"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnknownVariableType = "warning"
reportUnknownMemberType = "warning"
reportUnknownArgumentType = "warning"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["app/tests"]
